--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,17 +1,25 @@
-<!-- templates/contact.html -->
 {% extends "base.html" %}
 
 {% block title %}Contact - My Website{% endblock %}
 
+
 {% block content %}
 <h1>Contact Us</h1>
-<form method="POST">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name"><br><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message"></textarea><br><br>
+<form method="POST" class="feedback-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
+    
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+    
+    <label for="message">Message:</label>
+    <textarea id="message" name="message"></textarea>
+    
     <input type="submit" value="Submit">
 </form>
+
+<h2>Our Location</h2>
+<div class="map-container">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.7080889521578!2d39.23897494252451!3d-6.784298166455367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4c1dc3713097%3A0xec33b93d5bbeed25!2sTanafarahi%20St%2C%20Dar%20es%20Salaam!5e1!3m2!1sen!2stz!4v1726754722537!5m2!1sen!2stz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 {% endblock %}
