--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Project</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <!-- Corrected link to the CSS file using url_for -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
